# bigdata-project

./: pyproject.toml  requirements.txt
projeto_imoveis/: dados_api_ano.json  dados_api_bairro.json  datasetsimul.csv  db.sqlite3  index.html  manage.py
projeto_imoveis/api/: views.py
projeto_imoveis/api/management/commands/: processar_dados.py
projeto_imoveis/projeto_imoveis/: asgi.py  settings.py  urls.py  wsgi.py
